# termina-api

./: README.md  app.py  main.py  model.pkl  pyproject.toml  requirements.txt
