[tool.poetry]
name = "termina-api-1"
version = "0.1.0"
description = ""
authors = ["Neha Desaraju <neha.desaraju@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-restful = "^0.3.8"
pandas = "^1.2.3"
sklearn = "^0.0"
spotipy = "^2.17.1"
flask = "^1.1.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
